kubernetes/apps/media/tautulli/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tautulli
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  egress:
    # plex
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
  ingress:
    # plex
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: maintainerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: jellyseerr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
